--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "string-comparison": "^1.3.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
@@ -34,6 +35,7 @@
     "cssnano": "^6.0.2",
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.19.13",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8.56.0",
     "mysql2": "^3.6.5",
     "postcss": "^8.4.32",
@@ -41,6 +43,10 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwind-config-viewer": "^1.7.3",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "volta": {
+    "node": "20.10.0"
   }
 }
