--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "db:push": "dotenv drizzle-kit push:pg",
+    "db:push": "dotenv drizzle-kit push:mysql",
     "db:studio": "dotenv drizzle-kit studio",
     "db:seed:countries": "ts-node --esm --transpile-only --project tsconfig.json ./src/server/seed/country.ts",
     "tw:config-viewer": "tailwind-config-viewer --config ./tailwind.config.cjs --port 3002",
@@ -17,8 +17,8 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "drizzle-orm": "^0.27.2",
+    "mysql2": "^3.6.5",
     "next": "^14.0.4",
-    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
@@ -30,7 +30,6 @@
     "@next/eslint-plugin-next": "^14.0.4",
     "@types/eslint": "^8.56.0",
     "@types/node": "^20.10.6",
-    "@types/pg": "^8.10.9",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
