chore+fix: convert of docker db setup + functional seeding flow

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "next start",
     "db:push": "dotenv drizzle-kit push:mysql",
     "db:studio": "dotenv drizzle-kit studio",
-    "db:seed:countries": "ts-node --esm --transpile-only --project tsconfig.json ./src/server/seed/country.ts",
-    "db:seed:stock": "ts-node --esm --transpile-only --project tsconfig.json ./src/server/seed/stock.ts",
+    "db:seed:countries": "npx tsx ./src/server/seed/country.ts",
+    "db:seed:stock": "npx tsx ./src/server/seed/stock.ts",
     "tw:config-viewer": "tailwind-config-viewer --config ./tailwind.config.cjs --port 3002",
     "lint": "next lint"
   },
@@ -19,7 +19,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "drizzle-orm": "^0.27.2",
     "mysql2": "^3.6.5",
-    "next": "^14.0.4",
+    "next": "14.0.5-canary.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
