--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/server/seed/stock.mjs"
   ],
   "exclude": ["node_modules"]
 }
