--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@
 # Drizzle
 # Get the Database URL from the "prisma" dropdown selector in PlanetScale. 
 # Change the query params at the end of the URL to "?ssl={"rejectUnauthorized":true}"
-DATABASE_URL='postgresql://YOUR_MYSQL_URL_HERE?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://YOUR_MYSQL_USERNAME:YOUR_MYSQL_PASSWORD@YOUR_MYSQL_HOST:YOUR_MYSQL_PORT/hrt-countries'
 
 # Example:
 # SERVERVAR="foo"
