--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,9 @@ version: "3.1"
 
 services:
   db:
-    image: postgres
+    image: mariadb:latest
     restart: always
     ports:
-      - 5432:5432
+      - 3309:3306
     environment:
-      POSTGRES_PORT: 5432
-      POSTGRES_DB: hrt-countries
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: password
+      MARIADB_ROOT_PASSWORD: password
