--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "country-locale-map": "^1.9.0",
     "drizzle-orm": "^0.27.2",
     "mysql2": "^3.6.5",
     "next": "14.0.5-canary.41",
