--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "country-locale-map": "^1.9.0",
     "drizzle-orm": "^0.27.2",
+    "lucide-react": "^0.307.0",
     "mysql2": "^3.6.5",
     "next": "14.0.5-canary.41",
     "react": "18.2.0",
