--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "clsx": "^2.1.0",
     "country-locale-map": "^1.9.0",
     "drizzle-orm": "^0.27.2",
-    "lucide-react": "^0.307.0",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.7.0",
     "next": "14.0.5-canary.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "server-only": "^0.0.1",
     "string-comparison": "^1.3.0",
     "superjson": "^2.2.1",
@@ -30,24 +32,26 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
-    "@types/eslint": "^8.56.0",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@types/eslint": "^8.56.1",
+    "@types/node": "^20.10.8",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.2",
+    "class-variance-authority": "^0.7.0",
+    "cssnano": "^6.0.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.19.13",
     "esbuild-register": "^3.5.0",
     "eslint": "^8.56.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.10",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwind-config-viewer": "^1.7.3",
-    "tailwindcss": "^3.4.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
