--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.3",
     "clsx": "^2.1.0",
     "country-locale-map": "^1.9.0",
     "drizzle-orm": "^0.27.2",
+    "lucide-react": "^0.312.0",
     "mysql2": "^3.7.0",
     "next": "14.0.5-canary.59",
     "react": "18.2.0",
@@ -27,6 +29,8 @@
     "server-only": "^0.0.1",
     "string-comparison": "^1.3.0",
     "superjson": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
