--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.3",
+    "@vercel/kv": "^1.0.1",
+    "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "country-locale-map": "^1.9.0",
     "drizzle-orm": "^0.27.2",
     "lucide-react": "^0.312.0",
     "mysql2": "^3.7.0",
-    "next": "14.1.1-canary.3",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
