docs: added setup guide to readme

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@
 # Change the query params at the end of the URL to "?ssl={"rejectUnauthorized":true}"
 DATABASE_URL='mysql://YOUR_MYSQL_USERNAME:YOUR_MYSQL_PASSWORD@YOUR_MYSQL_HOST:YOUR_MYSQL_PORT/hrt-countries'
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+KV_URL="redis://default:[password]@[kv-db-name].kv.vercel-storage.com:46986"
+KV_REST_API_URL="https://[kv-db-name].kv.vercel-storage.com"
+KV_REST_API_TOKEN=""
+KV_REST_API_READ_ONLY_TOKEN=""
